tests/snapshots/integration__hook_fn__hook_only_before.snap
---
source: tests/hook_fn.rs
expression: data
---
RUN
prog

# OUTPUT
argc__args=( prog )
argc__fn=main
argc__positionals=(  )
_argc_before
main

# BUILD_OUTPUT
before
argc__args=([0]="prog")
argc__fn=main
argc__positionals=()
main
