tests/snapshots/integration__hook_fn__hook_with_main.snap
---
source: tests/hook_fn.rs
expression: data
---
RUN
prog

# OUTPUT
argc__args=( prog )
argc__fn=main
argc__positionals=(  )
_argc_before
main
_argc_after

# BUILD_OUTPUT
before
argc__args=([0]="prog")
argc__fn=main
argc__positionals=()
main
after
