tests/snapshots/integration__hook_fn__hook_without_subcmd.snap
---
source: tests/hook_fn.rs
expression: data
---
RUN
prog

# OUTPUT
argc__args=( prog )
argc__positionals=(  )
_argc_before

# BUILD_OUTPUT
before
